trying kill_jobs with make_method.py @poms_method decorator...

--- a/webservice/templates/kill_jobs_confirm.html
+++ b/webservice/templates/kill_jobs_confirm.html
@@ -13,7 +13,9 @@ Confirm {{act}} request {%include 'help_button.html'%}
 
 {%block subheader%}
 {%endblock%}
-
+{%if output is defined and not what is defined %}
+{%set what = output %}
+{%endif%}
 
 
 {%block content %}
