partway through @poms_method conversion of poms_service.py

--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -140,7 +140,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                     </button>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/campaign_deps_ini/{{experiment}}/{{role}}?tag={{s.name|urlencode}}">
+                    <a href="{{pomspath}}/campaign_deps_ini/{{experiment}}/{{role}}?name={{s.name|urlencode}}">
                         <button type="button">
                             <i class="list icon"></i>
                         </button>
