--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -121,7 +121,7 @@ Campaigns {{ show_hint('#Campaigns', 'Campaigns') }}
                     </button>
                 </td>
                 <td>
-                    <a href="{{pomspath}}/campaign_deps/{{experiment}}/{{role}}?tag={{s.name|urlencode}}">
+                    <a href="{{pomspath}}/campaign_deps/{{experiment}}/{{role}}?campaign_name={{s.name|urlencode}}">
                         <button type="button">
                             <i class="sitemap icon"></i>
                         </button>
