--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -1,8 +1,11 @@
 {%extends "layout.html"%}
 
+{%set name cs.name|default("")}
+
 {%block title%}
 POMS
 {%endblock%}
+
 
 {%block header%}
 <h1 class="ui header">
