--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -72,12 +72,12 @@ all the time...
               </div>
 
               <div class=item>
-              <a href="{{pomspath}}/campaign_stage_submissions/{{experiment}}/{{role}}?campaign_name={{CampaignStage.campaign_obj.name}}&stage_name={{CampaignStage.name}}&campaign_stage_id={{CampaignStage.campaign_stage_id}}&tdays=7&tmax={{last_activity}}">
+              <a href="{{pomspath}}/campaign_stage_submissions/{{session_experiment}}/{{session_role}}?campaign_name={{CampaignStage.campaign_obj.name}}&stage_name={{CampaignStage.name}}&campaign_stage_id={{CampaignStage.campaign_stage_id}}&tdays=7&tmax={{last_activity}}">
                 <i class="external submissions icon" data-content="Campaign Stage Submissins (1wk)" data-variation="basic"></i>Campaign Stage Submissions (1wk)
               </a>
               </div>
               <div class=item>
-                <a href="{{pomspath}}/campaign_task_files/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tmax={{last_activity}}&tdays=7"><i class="external file icon" data-content="List file statistics for Submissions for CampaignStage" data-variation="basic"></i>Campaign Stage Submission Files</a>
+                <a href="{{pomspath}}/campaign_task_files/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&tmax={{last_activity}}&tdays=7"><i class="external file icon" data-content="List file statistics for Submissions for CampaignStage" data-variation="basic"></i>Campaign Stage Submission Files</a>
               </div>
           </div> <!-- class=menu -->
     </div>
@@ -85,7 +85,7 @@ all the time...
          <h3>Actions</h3>
          <div class=menu>
               <div class=item>
-                <a href="{{pomspath}}/campaign_stage_edit/{{experiment}}/{{role}}?jump_to_campaign={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
+                <a href="{{pomspath}}/campaign_stage_edit/{{session_experiment}}/{{session_role}}?jump_to_campaign={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}>
                 <i class="external edit icon" data-content="Edit CampaignStage" data-variation="basic"></i>Edit Campaign Stage</a>
                </div>
@@ -99,7 +99,7 @@ all the time...
                      }
                  }
                 </script>
-                <button onclick="confirm_call('Are you sure you want to submit jobs?','{{pomspath}}/launch_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
+                <button onclick="confirm_call('Are you sure you want to submit jobs?','{{pomspath}}/launch_jobs/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
                    and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external rocket icon" data-content="Immediately Launch Submissions for CampaignStage" data-variation="basic">
@@ -107,14 +107,14 @@ all the time...
                   Launch Campaign Stage Jobs Now
                 </button>
                 &nbsp; &nbsp;
-                <a href="{{pomspath}}/launch_jobs_commands/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
+                <a href="{{pomspath}}/launch_jobs_commands/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
                    and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                 (<i class="external text icon"></i>commands)
                </a>
               </div>
               <div class=item>
-                <button onclick="confirm_call('Are you sure you want to launch test jobs now?','{{pomspath}}/launch_jobs/{{experiment}}/{{role}}?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
+                <button onclick="confirm_call('Are you sure you want to launch test jobs now?','{{pomspath}}/launch_jobs/{{session_experiment}}/{{session_role}}?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}')" {{"disabled" if (session_role=="analysis"
                    and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external rocket icon" data-content="Immediately Launch Test Submissions for CampaignStage" data-variation="basic">
@@ -122,7 +122,7 @@ all the time...
                   Launch Campaign Stage Test Jobs Now
                 </button>
                 &nbsp; &nbsp;
-                <a href="{{pomspath}}/launch_jobs_commands/{{experiment}}/{{role}}?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
+                <a href="{{pomspath}}/launch_jobs_commands/{{session_experiment}}/{{session_role}}?test_launch=1&campaign_stage_id={{CampaignStage.campaign_stage_id}}&output_commands=True" {{"disabled" if (session_role=="analysis"
                    and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                 (<i class="external text icon"></i>commands)
@@ -130,7 +130,7 @@ all the time...
               </div>
 
               <div class=item>
-                <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=kill" {{"disabled" if (session_role=="analysis"
+                <a href="{{pomspath}}/kill_jobs/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=kill" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external trash icon" data-content="Kill running/idle jobs in CampaignStage" data-variation="basic">
@@ -139,7 +139,7 @@ all the time...
               </div>
 
               <div class=item>
-                <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=hold" {{"disabled" if (session_role=="analysis"
+                <a href="{{pomspath}}/kill_jobs/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=hold" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                 >
                    <i class="external pause icon" data-content="Hold running/idle jobs in CampaignStage" data-variation="basic">
@@ -148,7 +148,7 @@ all the time...
               </div>
 
               <div class=item>
-                 <a href="{{pomspath}}/kill_jobs/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=release" {{"disabled" if (session_role=="analysis"
+                 <a href="{{pomspath}}/kill_jobs/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&act=release" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                  >
                     <i class="external play icon" data-content="Release held jobs in CampaignStage" data-variation="basic">
@@ -157,7 +157,7 @@ all the time...
               </div>
 
               <div class=item>
-                 <a href="{{pomspath}}/schedule_launch/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
+                 <a href="{{pomspath}}/schedule_launch/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                  >
                     <i class="external calendar icon" data-content="Schedule Future Launches" data-variation="basic">
@@ -166,7 +166,7 @@ all the time...
              </div>
             {% if CampaignStage.hold_experimenter_id %}
             <div class=item>
-                 <a href="{{pomspath}}/mark_campaign_hold/{{experiment}}/{{role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Release" 
+                 <a href="{{pomspath}}/mark_campaign_hold/{{session_experiment}}/{{session_role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Release" 
                  >
                     <i class="sign out alternate icon" data-content="Release Queued Launches" data-variation="basic">
                     </i>Release queued launches
@@ -175,7 +175,7 @@ all the time...
              </div>
              {% else %}
              <div class=item>
-                 <a href="{{pomspath}}/mark_campaign_hold/{{experiment}}/{{role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Hold" 
+                 <a href="{{pomspath}}/mark_campaign_hold/{{session_experiment}}/{{session_role}}?ids2HR={{CampaignStage.campaign_stage_id}}&is_hold=Hold" 
                  >
                     <i class="sign in alternate icon" data-content="Queue Future Launches" data-variation="basic">
                     </i>Queue future job launches
@@ -185,14 +185,14 @@ all the time...
             <!--
              <div class=item>
               {# if CampaignStage.active %}
-                 <a href="{{pomspath}}/mark_campaign_active/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=False" {{"disabled" if (session_role=="analysis"
+                 <a href="{{pomspath}}/mark_campaign_active/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=False" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                  >
                     <i class="external hide icon" data-content="Mark CampaignStage Inactive" data-variation="basic">
                    </i>Mark Campaign Stage Inactive
                  </a>
               {% else %}
-                  <a href="{{pomspath}}/mark_campaign_active/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=True" {{"disabled" if (session_role=="analysis"
+                  <a href="{{pomspath}}/mark_campaign_active/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&is_active=True" {{"disabled" if (session_role=="analysis"
                          and CampaignStage.creator!=experimenter_id) or CampaignStage.experimenter_holder_obj}}
                   >
                     <i class="external unhide icon" data-content="Mark Campaign Stage Active" data-variation="basic">
@@ -235,7 +235,7 @@ all the time...
     {# currently unused
     <b>Split Dimensions</b>: {{CampaignStage.cs_split_dimensions}}<br/>
     #}
-    <b>Last Split</b>: {{CampaignStage.cs_last_split}} <a href="{{pomspath}}/reset_campaign_split/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}"><button class="mini ui button"><i class="fast backward icon"></i>Reset</button></a><br/>
+    <b>Last Split</b>: {{CampaignStage.cs_last_split}} <a href="{{pomspath}}/reset_campaign_split/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}"><button class="mini ui button"><i class="fast backward icon"></i>Reset</button></a><br/>
     <!-- <b>Active</b>: {{CampaignStage.active}} <br/> -->
     <b>Created</b>: {{CampaignStage.created}}<br/>
     <b>Creator</b>: {{Campaign_info.Experimenter.username}}<br/>
@@ -286,24 +286,24 @@ all the time...
    <ul>
    {%for f in launch_flist|sort(reverse=True)%}
       <li>
-      <a href="{{pomspath}}/list_launch_file/{{experiment}}/{{role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&fname={{f}}">{{f}}</a>
+      <a href="{{pomspath}}/list_launch_file/{{session_experiment}}/{{session_role}}?campaign_stage_id={{CampaignStage.campaign_stage_id}}&fname={{f}}">{{f}}</a>
       {%if f|length > 22 %}
           {%set submission_id = f.split('_')[3]|default('0')|int %}
           {%if submission_id != 0 %}
-          <a href="{{pomspath}}/submission_details/{{experiment}}/{{role}}?submission_id={{submission_id}}"><span class="ui label green">info</span></a>
+          <a href="{{pomspath}}/submission_details/{{session_experiment}}/{{session_role}}?submission_id={{submission_id}}"><span class="ui label green">info</span></a>
           {%if recent_submissions[submission_id]|default(9999) < 7000 and recent_submissions[submission_id]|default(9999) != 2000 %}
 
     
-              <a href="/poms/kill_jobs/{{experiment}}/{{role}}?submission_id={{submission_id}}&act=hold" title="Hold"><i class="ui pause icon"></i></a>&nbsp;
-              <a href="/poms/kill_jobs/{{experiment}}/{{role}}?submission_id={{submission_id}}&act=release" title="Release"><i class="ui play icon"></i></a>&nbsp;
-              <a href="/poms/kill_jobs/{{experiment}}/{{role}}?submission_id={{submission_id}}&act=kill" title="Kill"><i class="ui trash icon"></i></a>
+              <a href="/poms/kill_jobs/{{session_experiment}}/{{session_role}}?submission_id={{submission_id}}&act=hold" title="Hold"><i class="ui pause icon"></i></a>&nbsp;
+              <a href="/poms/kill_jobs/{{session_experiment}}/{{session_role}}?submission_id={{submission_id}}&act=release" title="Release"><i class="ui play icon"></i></a>&nbsp;
+              <a href="/poms/kill_jobs/{{session_experiment}}/{{session_role}}?submission_id={{submission_id}}&act=kill" title="Kill"><i class="ui trash icon"></i></a>
                <i class="ui forward icon  grey"></i>&nbsp;
                     
           {%elif recent_submissions[submission_id]|default(9999) == 7000 %}
                <i class="ui pause icon grey"></i>&nbsp;
                <i class="ui play icon grey"></i>&nbsp;
                <i class="ui trash icon grey"></i>&nbsp;
-                    <a href="{{pomspath}}/force_locate_submission/{{experiment}}/{{role}}?submission_id={{submission_id}}" title="Skip ahead to Located"><i class="ui forward icon"></i></a>
+                    <a href="{{pomspath}}/force_locate_submission/{{session_experiment}}/{{session_role}}?submission_id={{submission_id}}" title="Skip ahead to Located"><i class="ui forward icon"></i></a>
           {%else%}
                <i class="ui pause icon grey"></i>&nbsp;
                <i class="ui play icon grey"></i>&nbsp;
