--- a/webservice/templates/campaign_task_files.html
+++ b/webservice/templates/campaign_task_files.html
@@ -1,6 +1,7 @@
 {%extends "layout.html"%}
 
-{%set name cs.name|default("")}
+{%set name=cs.name|default("") %}
+{%set CampaignStage=cs %}
 
 {%block title%}
 POMS
