--- a/webservice/templates/kill_jobs.html
+++ b/webservice/templates/kill_jobs.html
@@ -24,7 +24,7 @@
 
 {%block content %}
 
-<div class="ui raised padded text container segment">
+<div class="ui raised padded text container segment" style="max-width: 60em !important;">
 <b><pre>
 {{command}}
 </pre></b>
