vis.js Network diagrams

--- a/webservice/templates/campaign_deps.html
+++ b/webservice/templates/campaign_deps.html
@@ -1,7 +1,10 @@
 {%extends "layout.html" %}
 
 {%block title%}
-POMS Campaign Stage Dependencies
+<title>POMS Campaign Stage Dependencies</title>
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.min.css" rel="stylesheet" type="text/css">
 {%endblock%}
 
 {%block header%}
