--- a/webservice/templates/launch_jobs.html
+++ b/webservice/templates/launch_jobs.html
@@ -18,6 +18,7 @@ Launch Jobs Results
 </div>
 
 <div class="ui raised padded text container segment">
+    <button class="mini ui button" onclick="confirm_call('Are you sure you want to abort this launch?','{{pomspath}}/abort_launch/{{session_experiment}}/{{session_role}}?submission_id={{submission_id}}')"> <i class="external fire extinguisher icon" data-content="abort Submission" data-variation="basic"> </i> Abort Launch</button>
 <b><pre>
 {{command}}
 </pre></b>
