Remove uploaded files round 2

--- a/webservice/templates/file_uploads.html
+++ b/webservice/templates/file_uploads.html
@@ -59,7 +59,7 @@ Uploaded Files
 
   <div class="ui raised segment">
   <h3> Uploaded files </h3>
-  <form action="{{pomspath}}/remove_uploaded_files/{{experiment}}/{{role}}/{{username}}">
+  <form action="{{pomspath}}/remove_uploaded_files/{{session_experiment}}/{{session_role}}/{{username}}">
   <table class="ui celled table raised">
   <thead>
   <tr><th><input name="file_all" id="file_all" type="checkbox"><th>Name</th><th>Size</th><th>Uploaded</th></tr>
