--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -136,7 +136,7 @@ Job Launches: {{launches}}
                 <div class="meta">
                 </div>
                 <div class="plotWrap">
-                    <iframe src="https://landscape.fnal.gov/monitor/d-solo/QE61LHhik/poms-monitoring?orgId=1&from=1537366499558&to=1537971299559&var-filter=pool%7C%3D%7Cfifebatch&theme=light&panelId=5" width="250" height="200" frameborder="0"></iframe>
+                    <iframe src="https://landscape.fnal.gov/monitor/d-solo/QE61LHhik/poms-monitoring?orgId=1&from=now-7d&to=now&var-filter=pool%7C%3D%7Cfifebatch&theme=light&panelId=5" width="250" height="200" frameborder="0"></iframe>
                 </div>
             </div>
             <a target="_blank" href="https://landscape.fnal.gov/monitor/d/QE61LHhik/poms-monitoring?orgId=1&from=now-7d&to=now&var-filter=pool%7C%3D%7Cfifebatch">
