new Landscape page from kretzke -- with name

--- a/webservice/templates/campaign_stage_info.html
+++ b/webservice/templates/campaign_stage_info.html
@@ -72,7 +72,7 @@ all the time...
                  <a href="https://fifemon.fnal.gov/monitor/d/X49EUj3iz/poms-stage?var-stage={{CampaignStage.campaign_stage_id}}" target='_blank'>POMS Campaign Stage(landscape)</a>
               </div>
               <div class=item>
-               <a href="https://fifemon.fnal.gov/monitor/d/X49EUj3iz/poms-stage?orgId=1&from=now-30d&to=now&var-stage={{CampaignStage.campaign_stage_id}}" target='_blank'>
+               <a href="https://fifemon.fnal.gov/monitor/d/X49EUj3iz/poms-stage?orgId=1&from=now-30d&to=now&var-stage={{CampaignStage.campaign_stage_id}}&var-stage_name={{CampaignStage.name}}" target='_blank'>
                    <i class="external bar chart icon" data-content="Campaign Stats"></i>Campaign Stage Stats (Landscape)
                </a>
               </div>
